[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["bekkage <bilguunsec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.7"
pydnsbl = "^1.1.5"
djangorestframework-simplejwt = "^5.3.0"
django-cors-headers = "^4.2.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
