[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["bekkaze <bilguunsec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
databases = "^0.8.0"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
